SERVER-74551 fix spammy WCE logging in findAndModify code

(cherry picked from commit ab75b27df99ad549b141ef27fcddf5eb04b58b74)